src/grammar/trivia/snapshots/yaml_parser__grammar__trivia__tests__separator_lines-3.snap
---
source: src/grammar/trivia/tests.rs
expression: "parse(trailing_lines, \"#one\\n\")"
---
- token: comment
  stream: "#one"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 4
      line: 0
      column: 4
- token: break
  stream: "\n"
  span:
    start:
      index: 4
      line: 0
      column: 4
    end:
      index: 5
      line: 1
      column: 0
- value: ~

