src/grammar/trivia/snapshots/yaml_parser__grammar__trivia__tests__separator_lines-7.snap
---
source: src/grammar/trivia/tests.rs
expression: "parse_unseparated(trailing_lines, \"\")"
---
- value: ~

