src/grammar/trivia/snapshots/yaml_parser__grammar__trivia__tests__separator_lines-8.snap
---
source: src/grammar/trivia/tests.rs
expression: "parse_unseparated(trailing_lines, \"#one\")"
---
- severity: error
  message: "expected a line break, but found '#'"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
  stream: "#"
- remainder: "#one"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 4
      line: 0
      column: 4

